fix layout issues with chart

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,13 +41,6 @@
   box-shadow: $box-shadow--default;
   background-color: #fff;
 }
-
-.risk {
-  flex: none;
-  padding-left: $sidebar-width;
-  height: $risk-height;
-}
-
 h3 {
   margin-bottom: .5em;
   font-size: inherit;
